# semops-data

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh  start_services.py
.devcontainer/: Dockerfile  devcontainer.json
api/: mcp_server.py  query.py
config/: registry.yaml
config/mappings/: concept-pattern-coverage.yaml  concept-pattern-map.yaml
config/sources/: backoffice-pr-deployment.yaml  data-pr-deployment.yaml  docs-pr-deployment.yaml.retired  docs-pr.yaml.retired  dx-hub-deployment.yaml  dx-hub-domain-patterns.yaml  framework-docs.yaml  publisher-pr-deployment.yaml  publisher-pr.yaml  research-pr-deployment.yaml  semops-ai-github-profile.yaml  semops-ai-semops-core.yaml  semops-ai-semops-data.yaml  semops-ai-semops-docs.yaml  semops-ai-semops-dx-orchestrator.yaml  semops-ai-semops-publisher.yaml  semops-ai-semops-research.yaml  semops-ai-semops-sites.yaml  semops-hub-deployment.yaml  sites-pr-deployment.yaml
docs/: ARCHITECTURE.md  DATA_ARCHITECTURE.md  GAPS.md  INFRASTRUCTURE.md  MANIFEST_INDEX.md  PATTERNS.md  RUNBOOK.md  SEARCH_GUIDE.md  SESSION_NOTES.md  STRATEGIC_DDD.md  USER_GUIDE.md  frontmatter_template.md
docs/analysis/: COHERENCE_ANALYSIS_TEMPLATE.md  REMEDIATION_SUMMARY.md  data-management-analogy-reference.md  data-system-classification-reference.md  explicit-architecture-reference.md  governance-as-strategy-reference.md  ingestion-pipeline-design.md  mirror-architecture-reference.md  primitive-deconstruction-reference.md  sc-walkthrough-explicit-architecture.md  scale-projection-reference.md  search-results-example.md  semantic-optimization-reference.md
docs/archive/: DDD_arch.md  INFRASTRUCTURE-SETUP-GUIDE.md  SYSTEM_CONTEXT.md
docs/command-logs/: 2026-03-15-intake-issue-179.md  2026-03-15-intake-issue-180.md  2026-03-29-intake-adr-0015-ingestion-pipeline.md
docs/concept-inventory/: consolidated-concept-inventory.md  definition-parking-lot.md  definition-review.md
docs/decisions/: ADR-0001-tech-stack-and-architecture-foundations.md  ADR-0001.md  ADR-0002-devcontainer-mlops-environment.md  ADR-0002.md  ADR-0003-coherence-scoring-pipeline.md  ADR-0003.md  ADR-0004-schema-phase2-pattern-aggregate-root.md  ADR-0005-global-developer-configuration.md  ADR-0006-v1-documentation-plan.md  ADR-0007-concept-content-value-objects.md  ADR-0008-unified-ingestion-and-retrieval.md  ADR-0009-strategic-tactical-ddd-refactor.md  ADR-0010-database-connectivity-convention.md  ADR-0011-agent-governance-model.md  ADR-0012-pattern-coherence-co-equal-aggregates.md  ADR-0013-agent-entity-type.md  ADR-0014-coherence-measurement-model.md  ADR-0015-ingestion-pipeline-architecture.md  ADR-0016-data-layer-boundaries.md  ADR-0017-agentic-reasoning-trace-episode-model.md  README.md  TEMPLATE.md
docs/domain-patterns/: README.md
docs/planning/: ai-data-management.md  huggingface-datasets.md  mlops.md  nvidia-ai-data-systems.md  python-faker.md
docs/plumbus/: bom.md  erp.md  pim.md  script.md  sku.md
docs/project-specs/: PROJECT-30-explicit-enterprise-data-toolkit.md
docs/research/: README.md  ingestion-graph-edge-relationships.md
lineage/: LINEAGE_TRACKING.md
schemas/: GOVERNANCE_MODEL.md  README.md  SCHEMA_CHANGELOG.md  SCHEMA_REFERENCE.md  SKOS_PROVO_MAPPING.md  UBIQUITOUS_LANGUAGE.md  fitness-functions.sql  phase2-schema.sql  wiki-structure
schemas/archive/: DOMAIN_PATTERNS.md  ENTITY_ATTRIBUTES_TABLE.md  UBIQUITOUS_LANGUAGE_v2.md  UBIQUITOUS_LANGUAGE_v6.md  phase1-schema.sql
schemas/attribution/: attribution_v1.json  attribution_v2.json
schemas/filespec/: filespec_v1.json
scripts/: Dockerfile.ingestion  README.md  aggregate_adrs.py  bridge_content_patterns.py  chunker.py  cleanup_stale_patterns.py  core_coverage_gap.py  create_described_by_edges.py  db_utils.py  detect_drift.py  docling_ingest.py  enrich_pattern_definitions.py  entity_builder.py  extract_deployment_dates.py  generate_concept_embeddings.py  generate_embeddings.py  generate_local_embeddings.py  github_fetcher.py  governance_checks.py  graph_queries.py  ingest_architecture.py  ingest_concepts.py  ingest_concepts_sql.py  ingest_domain_patterns.py  ingest_from_source.py  ingest_github_issues.py  ingest_markdown_docs.py  init_qdrant.py  init_schema.py  lineage_utils.py  llm_classifier.py  local_semantic_search.py  log_event.sh  manage_lineage.py  materialize_graph.py  rag_query.py  registry_alignment.py  run_classifiers.py  schema_queries.py  search.py  (+10 more)
scripts/classifiers/: __init__.py  (+6 more)
tests/: __init__.py  test_coherence.py  test_synthetic.py
(+48 files in other folders)
